# constellation-encoder

./: Cargo.toml  README.md
benches/: fec_bench.rs
docker/: Dockerfile  compose.yaml  run-netem-sweep.sh
src/: fec.rs  lib.rs
tests/: roundtrip.rs
