[package]
name = "constellation-encoder"
version = "0.1.0"
edition = "2024"

[lib]
name = "constellation_encoder"
path = "src/lib.rs"

[[bin]]
name = "constellation-encoder"
path = "src/main.rs"

[[bin]]
name = "sender"
path = "src/bin/sender.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[dependencies]
reed-solomon-erasure = "6.0.0"

[dev-dependencies]
criterion = "0.8"
rand = "0.9"

[[bench]]
name = "fec_bench"
harness = false
